--- a/src/components/cta/cta.css
+++ b/src/components/cta/cta.css
@@ -1,4 +1,4 @@
-.bryantdesigns__cta {
+.gpt3__cta {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -10,7 +10,7 @@
     background: var(--gradient-bar)
 }
 
-.bryantdesigns__cta-content {
+.gpt3__cta-content {
     display: flex;
     flex-direction: column;
 
@@ -18,21 +18,21 @@
     color: #fff;
 }
 
-.bryantdesigns__cta-content p {
+.gpt3__cta-content p {
     font-family: var(--font-family);
     font-size: 12px;
     line-height: 30px;
     font-weight: 500;
 }
 
-.bryantdesigns__cta-content h3 {
+.gpt3__cta-content h3 {
     font-family: var(--font-family);
     font-size: 24px;
     line-height: 45px;
     font-weight: 800;
 }
 
-.bryantdesigns__cta-btn {
+.gpt3__cta-btn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,7 +40,7 @@
     margin-left: 2rem;
 }
 
-.bryantdesigns__cta-btn button {
+.gpt3__cta-btn button {
     background: #000;
     color: #fff;
     font-family: var(--font-family);
@@ -57,27 +57,27 @@
 }
 
 @media screen and (max-width: 650px) {
-    .bryantdesigns__cta {
+    .gpt3__cta {
         flex-direction: column;
     }
 
-    .bryantdesigns__cta-btn {
+    .gpt3__cta-btn {
         margin: 2rem 0 0;
     }
 }
 
 @media screen and (max-width: 550px) {
-    .bryantdesigns__cta {
+    .gpt3__cta {
         flex-direction: column;
         margin: 4rem 2rem;
     }
 
-    .bryantdesigns__cta-content h3 {
+    .gpt3__cta-content h3 {
         font-size: 18px;
         line-height: 32px;
     }
 
-    .bryantdesigns__cta-btn button {
+    .gpt3__cta-btn button {
         font-size: 14px;
         line-height: 28px;
     }
