--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,37 +1,41 @@
-.bryantdesigns__navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 2rem 6rem;
-}
-.bryantdesigns__navbar-links {
-  flex: 1;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-.bryantdesigns__navbar-links_logo {
-  margin-right: 2rem;
-}
-.bryantdesigns__navbar-links_logo img {
-  width: 62.56px;
-  height: 16.02px;
+.gpt3__navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 2rem 6rem;
 }
 
-.bryantdesigns__navbar-links_container {
+.gpt3__navbar-links {
+    flex: 1;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.gpt3__navbar-links_logo {
+    margin-right: 2rem;
+}
+
+.gpt3__navbar-links_logo img {
+    width: 62.56px;
+    height: 16.02px;
+}
+
+.gpt3__navbar-links_container {
     display: flex;
     flex-direction: row;
 }
 
-.bryantdesigns__navbar-sign {
+.gpt3__navbar-sign {
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
 
-.bryantdesigns__navbar-links_container p,
-.bryantdesigns__navbar-sign p,
-.bryantdesigns__navbar-menu_container p {
+.gpt3__navbar-links_container p,
+.gpt3__navbar-sign p,
+.gpt3__navbar-menu_container p {
     color: #fff;
     font-family: var(--font-family);
     font-weight: 500;
@@ -43,8 +47,8 @@
     cursor: pointer;
 }
 
-.bryantdesigns__navbar-sign button,
-.bryantdesigns__navbar-menu_container button {
+.gpt3__navbar-sign button,
+.gpt3__navbar-menu_container button {
     padding: 0.5rem 1rem;
     color: #fff;
     background: #FF4820;
@@ -58,18 +62,18 @@
     border-radius: 5px;
 }
 
-.bryantdesigns__navbar-menu {
+.gpt3__navbar-menu {
     margin-left: 1rem;
 
     display: none;
     position: relative;
 }
 
-.bryantdesigns__navbar-menu svg {
+.gpt3__navbar-menu svg {
     cursor: pointer;
 }
 
-.bryantdesigns__navbar-menu_container {
+.gpt3__navbar-menu_container {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -87,44 +91,44 @@
     box-shadow: 0px 0px 5px rgba(0,0, 0,0.2);
 }
 
-.bryantdesigns__navbar-menu_container p {
+.gpt3__navbar-menu_container p {
     margin: 1rem 0;
 }
 
-.bryantdesigns__navbar-menu_container-links-sign {
+.gpt3__navbar-menu_container-links-sign {
     display: none;
 }
 
 @media screen and (max-width: 1050px) {
-    .bryantdesigns__navbar-links_container {
+    .gpt3__navbar-links_container {
         display: none;
     }
 
-    .bryantdesigns__navbar-menu {
+    .gpt3__navbar-menu {
         display: flex;
     }
 }
 
 @media screen and (max-width: 700px) {
-    .bryantdesigns__navbar {
+    .gpt3__navbar {
         padding: 2rem 4rem;
     }
 }
 
 @media screen and (max-width: 550px) {
-    .bryantdesigns__navbar {
+    .gpt3__navbar {
         padding: 2rem;
     }
 
-    .bryantdesigns__navbar-sign {
+    .gpt3__navbar-sign {
         display: none;
     }
 
-    .bryantdesigns__navbar-menu_container {
+    .gpt3__navbar-menu_container {
         top: 20px;
     }
 
-    .bryantdesigns__navbar-menu_container-links-sign {
+    .gpt3__navbar-menu_container-links-sign {
         display: block;
     }
 }
