--- a/src/containers/whatGPT3/whatGPT3.css
+++ b/src/containers/whatGPT3/whatGPT3.css
@@ -1,4 +1,4 @@
-.bryantdesigns__whatbryantdesigns {
+.gpt3__whatgpt3 {
     display: flex;
     flex-direction: column;
 
@@ -23,21 +23,21 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-.bryantdesigns__whatbryantdesigns-feature {
+.gpt3__whatgpt3-feature {
     display: flex;
 }
 
 /* Customizing feature component as per needs */
-.bryantdesigns__whatbryantdesigns-feature .bryantdesigns__features-container__feature {
+.gpt3__whatgpt3-feature .gpt3__features-container__feature {
     margin: 0;
 }
 
 /* Customizing feature component as per needs */
-.bryantdesigns__whatbryantdesigns-feature .bryantdesigns__features-container_feature-text {
+.gpt3__whatgpt3-feature .gpt3__features-container_feature-text {
     max-width: 700px;
 }
 
-.bryantdesigns__whatbryantdesigns-heading {
+.gpt3__whatgpt3-heading {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -46,7 +46,7 @@
     margin: 4rem 0 2rem;
 }
 
-.bryantdesigns__whatbryantdesigns-heading h1 {
+.gpt3__whatgpt3-heading h1 {
     font-size: 34px;
     line-height: 45px;
     font-weight: 800;
@@ -54,7 +54,7 @@
     max-width: 510px;
 }
 
-.bryantdesigns__whatbryantdesigns-heading p {
+.gpt3__whatgpt3-heading p {
     font-family: var(--font-family);
     font-weight: 500;
     font-size: 16px;
@@ -63,7 +63,7 @@
     cursor: pointer;
 }
 
-.bryantdesigns__whatbryantdesigns-container {
+.gpt3__whatgpt3-container {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -72,7 +72,7 @@
 }
 
 /* Customizing feature component as per needs */
-.bryantdesigns__whatbryantdesigns-container .bryantdesigns__features-container__feature {
+.gpt3__whatgpt3-container .gpt3__features-container__feature {
     flex: 1;
     margin: 1rem;
     min-width: 210px;
@@ -81,34 +81,34 @@
 }
 
 /* Customizing feature component as per needs */
-.bryantdesigns__whatbryantdesigns-container .bryantdesigns__features-container_feature-text {
+.gpt3__whatgpt3-container .gpt3__features-container_feature-text {
     margin-top: 0.5rem;
 }
 
 @media screen and (max-width: 850px) {
-    .bryantdesigns__whatbryantdesigns-heading {
+    .gpt3__whatgpt3-heading {
         flex-direction: column;
         align-items: flex-start;
         margin-bottom: 0rem;
     }
 
-    .bryantdesigns__whatbryantdesigns-heading p {
+    .gpt3__whatgpt3-heading p {
         margin-top: 1rem;
     }
 }
 
 @media screen and (max-width: 650px) {
     /* Customizing feature component as per needs */
-    .bryantdesigns__whatbryantdesigns-feature .bryantdesigns__features-container__feature {
+    .gpt3__whatgpt3-feature .gpt3__features-container__feature {
         flex-direction: column;
     }
 
     /* Customizing feature component as per needs */
-    .bryantdesigns__whatbryantdesigns-feature .bryantdesigns__features-container_feature-text {
+    .gpt3__whatgpt3-feature .gpt3__features-container_feature-text {
         margin-top: 0.5rem;
     }
 
-    .bryantdesigns__whatbryantdesigns-heading h1 {
+    .gpt3__whatgpt3-heading h1 {
         font-size: 28px;
         line-height: 40px;
     }
@@ -116,7 +116,7 @@
 
 @media screen and (max-width: 350px) {
     /* Customizing feature component as per needs */
-    .bryantdesigns__whatbryantdesigns-container .bryantdesigns__features-container__feature {
+    .gpt3__whatgpt3-container .gpt3__features-container__feature {
         margin: 1rem 0;
         min-width: 100%;
     }
